--- a/TFAuto/TFAuto.WebApp.csproj
+++ b/TFAuto/TFAuto.WebApp.csproj
@@ -7,6 +7,12 @@
 
   <ItemGroup>
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
+    <PackageReference Include="Swashbuckle.AspNetCore.Annotations" Version="6.5.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\TFAuto.DAL\TFAuto.DAL.csproj" />
+    <ProjectReference Include="..\TFAuto.Domain\TFAuto.Domain.csproj" />
   </ItemGroup>
 
   <ItemGroup>
