--- a/TFAuto/appsettings.json
+++ b/TFAuto/appsettings.json
@@ -4,7 +4,7 @@
   },
   "CosmosDBConnectionSettings": {
     "DatabaseId": "tfauto-dev",
-    "ContainerId": "tfauto"
+    "ContainerId": "TFAuto"
   },
   "Logging": {
     "LogLevel": {
