--- a/TFAuto.Domain/TFAuto.Domain.csproj
+++ b/TFAuto.Domain/TFAuto.Domain.csproj
@@ -7,7 +7,8 @@
 
   <ItemGroup>
     <Folder Include="Helpers\" />
-    <Folder Include="Repository\" />
+    <Folder Include="Repository\Permissions\" />
+    <Folder Include="Repository\Users\" />
   </ItemGroup>
 
   <ItemGroup>
