--- a/TFAuto.Domain/TFAuto.Domain.csproj
+++ b/TFAuto.Domain/TFAuto.Domain.csproj
@@ -7,8 +7,7 @@
 
   <ItemGroup>
     <Folder Include="Helpers\" />
-    <Folder Include="Repository\Permissions\" />
-    <Folder Include="Repository\Users\" />
+    <Folder Include="Repository\" />
   </ItemGroup>
 
   <ItemGroup>
