--- a/TFAuto/appsettings.json
+++ b/TFAuto/appsettings.json
@@ -12,5 +12,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "SendGridSettings": {
+    "ApiKey": "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",
+    "FromName": "TechFabric",
+    "FromEmail": "konstantin.donchenko@techfabric.com"
+  },
   "AllowedHosts": "*"
 }
