--- a/TFAuto.Domain/TFAuto.Domain.csproj
+++ b/TFAuto.Domain/TFAuto.Domain.csproj
@@ -17,6 +17,7 @@
     <PackageReference Include="IEvangelist.Azure.CosmosRepository" Version="7.0.1" />
     <PackageReference Include="Microsoft.Azure.Cosmos" Version="3.35.2" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+    <PackageReference Include="SendGrid" Version="9.28.1" />
   </ItemGroup>
 
   <ItemGroup>
