--- a/TFAuto/appsettings.json
+++ b/TFAuto/appsettings.json
@@ -17,5 +17,9 @@
     "FromName": "TechFabric",
     "FromEmail": "konstantin.donchenko@techfabric.com"
   },
+  "PasswordResetSettings": {
+    "TokenExpiryMinutes": 30,
+    "ResetLinkBaseUrl": "12456"
+  },
   "AllowedHosts": "*"
 }
