--- a/TFAuto.DAL/TFAuto.DAL.csproj
+++ b/TFAuto.DAL/TFAuto.DAL.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -6,8 +6,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Azure.Storage.Blobs" Version="12.17.0" />
     <PackageReference Include="IEvangelist.Azure.CosmosRepository" Version="7.0.1" />
-    <PackageReference Include="Microsoft.Azure.Cosmos" Version="3.35.3" />
+    <PackageReference Include="Microsoft.Azure.Cosmos" Version="3.35.2" />
   </ItemGroup>
 
 </Project>
