--- a/TFAuto/appsettings.json
+++ b/TFAuto/appsettings.json
@@ -10,7 +10,7 @@
   },
 
   "BlobStorageSettings": {
-    "ContainerId": "images",
+    "ContainerName": "images",
     "ContentType": "image/jpg",
     "MaxAvatarImageFileSize": "200*200",
     "MaxPostImageFileSize": "1024*682",
