added unique one time code in email and refact. by comments

--- a/TFAuto/appsettings.json
+++ b/TFAuto/appsettings.json
@@ -39,7 +39,8 @@
   },
 
   "PasswordResetSettings": {
-    "TokenExpiryMinutes": 30,
+    "TokenLifetimeInSeconds": 900,
+    "TokenLength": 5,
     "ResetLinkBaseUrl": "12456"
   },
 
