Delated gaps and blank lines, changed data types in some request models, replaced code repeatings, implemented correct variables naming, added checking for correct image extensions before uploadind and updating into Blob, created file for business logic limitations

--- a/TFAuto/appsettings.json
+++ b/TFAuto/appsettings.json
@@ -14,7 +14,7 @@
     "ContentType": "image/jpg",
     "MaxAvatarImageFileSize": "200*200",
     "MaxPostImageFileSize": "1024*682",
-    "AllowedFileExtensions": ".jpg,.jpeg,.png",
+    "AllowedFileExtensions": [ ".jpg", ".jpeg", ".png" ],
     "DowloadFileExtensions": ".jpg"
   },
 
