added url + refac. by comments

--- a/TFAuto/appsettings.json
+++ b/TFAuto/appsettings.json
@@ -38,10 +38,9 @@
     "FromEmail": "konstantin.donchenko@techfabric.com"
   },
 
-  "PasswordResetSettings": {
+  "TokenSettings": {
     "TokenLifetimeInSeconds": 900,
-    "TokenLength": 5,
-    "ResetLinkBaseUrl": "12456"
+    "TokenLength": 5
   },
 
   "AllowedHosts": "*"
