--- a/TFAuto.Domain/TFAuto.Domain.csproj
+++ b/TFAuto.Domain/TFAuto.Domain.csproj
@@ -13,6 +13,7 @@
     <PackageReference Include="IEvangelist.Azure.CosmosRepository" Version="7.0.1" />
     <PackageReference Include="Microsoft.AspNetCore.Http.Features" Version="5.0.17" />
     <PackageReference Include="Microsoft.Azure.Cosmos" Version="3.35.3" />
+    <PackageReference Include="Microsoft.Data.SqlClient" Version="5.1.1" />
     <PackageReference Include="Microsoft.Extensions.Caching.Abstractions" Version="7.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.18" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
