Created Contact Us Email sender from user

--- a/TFAuto/appsettings.json
+++ b/TFAuto/appsettings.json
@@ -35,7 +35,8 @@
   "SendGridSettings": {
     "ApiKey": "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",
     "FromName": "TechFabric",
-    "FromEmail": "konstantin.donchenko@techfabric.com"
+    "FromEmail": "konstantin.donchenko@techfabric.com",
+    "ContactUsEmail": "konstantin.donchenko@techfabric.com"
   },
 
   "TokenSettings": {
